[tool.poetry]
name = "CWManageLabelMaker"
version = "0.1.0"
description = "Label maker integration to ConnectWise manage for easier procurement and organization."
authors = ["Your Name <joseph@ctsatlanta.net>"]
readme = "README.md"
packages = [{include = "CWManageLabelMaker"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^2.2.2"
pywin32 = "^304"
requests = "^2.28.1"
waitress = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
